--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1 style="text-align: center">Jahia React App - Headless News through GraphQL API</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
